# aws-account-audit

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main-version-tag.yml  python-quality.yml
aws_account_audit/: __init__.py  __main__.py  account_check.py  account_index.py  audit.py  cli.py  collectors.py  iam_graph.py  inventory.py  kms.py  models.py  organizations.py  png_tiles.py  session.py
aws_account_audit/snowflake/: __init__.py  __main__.py  audit.py  check.py  collectors.py  index.py  inventory.py  query.py  session.py
aws_network_map/: __init__.py  __main__.py  account_graph.py  cli.py  export.py  from_audit.py  graph.py  graph_style.py  mermaid-config.json  network.py  render.py  resolve.py  tracers.py
scripts/: audit-iam.sh  npm-smoke-test.mjs
tests/: test_account_check.py  test_account_graph.py  test_account_index.py  test_collectors.py  test_export.py  test_from_audit.py  test_iam_graph.py  test_inventory.py  test_kms.py  test_organizations.py  test_png_tiles.py  test_session.py  test_snowflake.py
